--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   </head>
 
   <body>
-    <span style="font-size:20px;">РљР°Р»СЊРєСѓР»СЏС‚РѕСЂ</span><br>
+    <span style="font-size:20px;">Калькулятор</span><br>
     <input id="field" onkeyup="myEnter(event);"/>
-	<button onclick="myClick();">РџРѕСЃС‡РёС‚Р°С‚СЊ</button><br>
-	Р РµР·СѓР»СЊС‚Р°С‚:<div style="display: inline;" id="result">1</div>
+	<button onclick="myClick();">Посчитать?</button><br>
+	Результат:<div style="display: inline;" id="result">1</div>
 
-<script> 
+<script>  
 function myClick(){
   var a = document.getElementById('field').value;
-  var b = eval(a);	
+  var b = eval(a);
   //console.log(b);
-
+ 
   document.getElementById('result').innerText = b;
 }
 
